# rasvts

./: README.md  arduino_for_robots.ino  frames_2025-12-08_20.19.35.gv  frames_2025-12-10_01.43.45.gv  run_all_robot.sh
install/: local_setup.sh  setup.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_control/lib/my_robot_control/: diff_drive_serial_bridge  fake_odom_node  keyboard_teleop  keyboard_teleop_arrows  simple_motion_commands  straight_line_node
install/my_robot_control/share/my_robot_control/: package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
install/smartfleet_msgs/share/smartfleet_msgs/: local_setup.dsv  package.dsv  package.sh  package.xml
install/smartfleet_msgs/share/smartfleet_msgs/cmake/: export_smartfleet_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  smartfleet_msgs__rosidl_typesupport_cExport-noconfig.cmake  smartfleet_msgs__rosidl_typesupport_introspection_cExport.cmake  smartfleet_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  smartfleet_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/smartfleet_msgs/share/smartfleet_msgs/msg/: DeliveryTask.msg  V2VMessage.msg  VehicleState.idl  VehicleState.msg
log/: latest_build
smartfleet_vehicle/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/install/my_robot_control/share/my_robot_control/: package.sh  package.xml
src/install/my_robot_control/share/my_robot_control/launch/: straight_line.launch.py
src/log/: latest_build
src/my_maps/maps/: test_map.pgm  test_map.yaml
src/my_robot/urdf/: my_robot.urdf
src/my_robot_bringup/: CMakeLists.txt  config.rviz
src/my_robot_bringup/config/: my_mapping.rviz
src/my_robot_bringup/launch/: live_mapping.launch.py  manual_control.launch.py  mapping_control.launch.py
src/my_robot_control/: setup.cfg  setup.py
src/my_robot_control/my_robot_control/: diff_drive_serial_bridge.py  fake_odom_node.py  keyboard_teleop.py  simple_motion_commands.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/smartfleet_msgs/: CMakeLists.txt
src/smartfleet_msgs/install/: local_setup.sh  setup.sh  setup.zsh
src/smartfleet_msgs/install/smartfleet_msgs/share/smartfleet_msgs/: package.bash
src/smartfleet_msgs/log/: latest_build
src/smartfleet_sim/: setup.cfg  setup.py
(+128 files in other folders)
