<?xml version="1.0"?>
<package format="3">
  <name>smartfleet_msgs</name>
  <version>0.0.0</version>
  <description>Custom message definitions for the smart fleet simulation</description>

  <maintainer email="louay@example.com">louay</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <!-- required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
