<?xml version="1.0"?>
<package format="3">
  <name>my_robot_control</name>
  <version>0.0.1</version>
  <description>Control nodes for my robot (cmd_vel, Arduino bridge, fake odom)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
